# activity-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
activity_classifier/: __init__.py  features.py  sigproc.py  sigproc_gpt.py
activity_classifier/_BAK/: __init__OLD.py
activity_classifier/notebooks/: DEV_sigproc_A.ipynb  EDA_01a_save_time_gaps.ipynb  EDA_01b_analyze_time_gaps.ipynb  EDA_02a_save_annot_consistency.ipynb  EDA_02b_analyze_annot_consistency.ipynb  TEST_01_SmartIIRFilter.ipynb  TEST_02_Updated_ChunkableTS.ipynb  TEST_03_feature_extraction.ipynb  _scr.ipynb  dev_ChunkableTimeSeries.ipynb
doc/: annotations_list.txt  venv-doc.txt
