[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "activity-classifier"
version = "0.1.0"
description = "Activity classification from sensor data"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
]

[tool.setuptools.packages.find]
include = ["activity_classifier*"]
exclude = ["output*"]

